--- a/booksmith_proj/static/css_files/landing_page.css
+++ b/booksmith_proj/static/css_files/landing_page.css
@@ -79,6 +79,11 @@ svg {
 .slider .list .item.active p:nth-child(3) {
   animation-duration: 0.3s;
 }
+
+a.btn hover-btn read-btn {
+  text-decoration: none;
+}
+
 .arrows {
   position: absolute;
   top: 30%;
